--- a/blog/myblog/templates/article_details.html
+++ b/blog/myblog/templates/article_details.html
@@ -8,7 +8,7 @@
 
 <h1>{{ post.title }}</h1>
 <small>By: {{ post.author.first_name }}
-    {{ post.author.last_name }}</small></br>
+    {{ post.author.last_name }} <a href="{% url 'update_post' post.pk %}">(Edit)</a></small></br>
 <hr>
 </br>
 {{ post.body }}
